# mcp-uber-eats-api

./: .env  .env.example  .gitignore  .mcp.json  CLAUDE.md  MCP_IMPLEMENTATION_ROADMAP.md  README.md  main.py  pyproject.toml  start.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json  docker-compose.yml  pull-model.sh  setup.sh
api/: __init__.py  client.py
api/models/: __init__.py  common.py  orders.py  promotions.py  stores.py
api/services/: __init__.py  byoc.py  delivery.py  orders.py  promotions.py  stores.py
app/: __init__.py  client.py  dependencies.py  main.py
app/models/: __init__.py  common.py  orders.py  promotions.py  stores.py
app/routers/: orders.py  promotions.py  stores.py
app/services/: __init__.py  orders.py  promotions.py  stores.py
docs/: Check List MCP Uber Eats.md  UI_idées.md  readme_content.md
docs/uber_eats_api_doc/: openapi (1).json  openapi (3).json  openapi.json
mcp_server/: client.py  server.py  tools.py
mcp_server/models/: orders.py
src/llm/: __init__.py  agent.py  main_litellm.py
src/mcp_server/: __init__.py  client.py  fixtures.py  mock_client.py  server.py  tools.py
src/mcp_server/mocks/: __init__.py  fixtures.py  mock_client.py
src/mcp_server/models/: __init__.py  orders.py  promotions.py  stores.py
tests/: fixtures.py  mock_client.py  test_models.py  test_services.py  test_tools.py
uber_eats_api_doc/: openapi (2).json  openapi (4).json
