[project]
name = "poc-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "fastmcp>=3.1.0",
    "litellm>=1.82.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
